--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-  {% include head.html %}
+  {% include head2.html %}
 
   <body>
 
@@ -13,7 +13,7 @@
       </div>
     </div>
 
-    {% include footer.html %}
+    {% include sidebar.html %}
 
   </body>
 
