--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="site-header">
 
-    <a class="site-title" href="{{ site.baseurl }}/"><h1>{{ site.title }}</h1></a>
+    <h1><a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
 
     {% include nav.html %}
 
