--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,8 +4,8 @@
 
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
+        <h3>Contact Me</h3>
         <ul class="contact-list">
-          <li style="font-weight: bold;">Contact Me</li>
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
  {% if site.github_username %}
           <li>
@@ -25,10 +25,8 @@
       </div>
 
       <div class="footer-col footer-col-3">
-        <ul class="social-media-list">
-            <li style="font-weight: bold;">About Me</li>
-            <li>{{ site.description }}</li>
-        </ul>
+        <h3>About Me</h3>
+        <p>{{ site.description }}</p>
       </div>
     </div>
 
