--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,35 +1,26 @@
 <aside class="site-sidebar">
 
-  <div class="wrapper">
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
+    <section class="contact">
         <h3>Contact Me</h3>
         <ul class="contact-list">
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
- {% if site.github_username %}
-          <li>
+            <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+            {% if site.github_username %}
+            <li>
             {% include icon-github.html username=site.github_username %}
-          </li>
-          {% endif %}
+            </li>
+            {% endif %}
 
-          {% if site.twitter_username %}
-          <li>
+            {% if site.twitter_username %}
+            <li>
             {% include icon-twitter.html username=site.twitter_username %}
-          </li>
-          {% endif %}
-      </ul>
-      </div>
+            </li>
+            {% endif %}
+        </ul>
+    </section>
 
-      <div class="footer-col footer-col-2">
-      </div>
-
-      <div class="footer-col footer-col-3">
+    <section class="about">
         <h3>About Me</h3>
         <p>{{ site.description }}</p>
-      </div>
-    </div>
-
-  </div>
+    </section>
 
 </aside>
