--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
 
-  {% include head2.html %}
+  {% include head.html %}
 
   <body>
 
     {% include header.html %}
 
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
+    <div class="wrapper">
+        <main>
+            {{ content }}
+        </main>
+
+        {% include sidebar.html %}
     </div>
-
-    {% include sidebar.html %}
-
+        {% include footer.html %}
   </body>
 
 </html>
