--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,3 +4,22 @@ h1, h2, h3,
 h4, h5, h6 {
     @extend %headings !optional;
 }
+
+%invis-list {
+
+    padding-left: 0;
+    margin: 0;
+    & > li {
+        list-style-type: none;
+    }
+}
+
+
+%style-link {
+    text-decoration: none;
+    color: inherit;
+
+    &:hover {
+        text-decoration: underline;
+    }
+}
