--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,8 +1,9 @@
 ---
 ---
 
-@import
-        "normalize",
+@import "normalize",
         "variables",
-        "general"
+        "general",
+        "header",
+        "projects"
 ;
