--- a/_sass/_general.scss
+++ b/_sass/_general.scss
@@ -1,20 +1,26 @@
 
+html { 
+    box-sizing: border-box; 
+    background: #FAFAFA;
+}
+html * { box-sizing: inherit; }
+
 body {
     max-width: 940px;
     margin: auto;
     padding-left: 8px;
     padding-right: 8px;
+    font-family: #{$font-family}
 }
 
 
 %headings {
     color: #2E2E2E;
-    font-family: 'Arvo', serif;
     font-weight: normal;
-    margin-bottom: 4px;
+    margin: 15px 0;
 
-    & > a {
-        @extend %style-link;
+    a {
+        @extend %invert-link-hover;
     }
 }
 
@@ -22,23 +28,33 @@ body {
     margin-top: 0;
 }
 
+h1, h2 {
+    text-align: center;
+    margin: 0 0 30px;
+}
+
 h1 {
-    font-size: 46px;
+    font-size: 70px;
 }
 h2 {
-    // font-size: 46px;
+    font-size: 50px;
+    @extend %heading-underline;
 }
 h3 {
-    // font-size: 46px;
+    font-size: 40px;
 }
 h4 {
-    // font-size: 46px;
+    font-size: 25px;
+}
+h5 {
+    font-size: 18px;
 }
 
+a {
+    color: inherit;
 
-article, section {
-    h1 {
-        font-size: 36px;
+    &:hover {
+        text-decoration: none;
     }
 }
 
@@ -53,19 +69,6 @@ article, section {
     }
 }
 
-nav {
-    text-align: center;
-
-    ul > li {
-        display: inline-block;
-    }
-}
-
-.site-header {
-    text-align: center;
-    margin-bottom: 60px;
-    width: 100%;
-}
 
 .site-footer {
     margin-bottom: 32px;
@@ -117,17 +120,23 @@ nav {
     @extend %invis-list;
 }
 
-// Icons
-.icon {
-
-    > svg {
-        display: inline-block;
-        width: 16px;
-        height: 16px;
-        vertical-align: middle;
-
-        path {
-            fill: $grey-color;
+// RESUME
+.resume {
+    .experience {
+        h4, h5, p {
+            margin-top: 0;
+            margin-bottom: 0;
         }
+        
+        p {
+            font-style: italic;
+            font-size: 14px;
+        }
+        
+        margin-bottom: 20px;
     }
 }
+
+
+
+
