--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,29 +1,22 @@
 <section class="projects">
-    <h2>Projects</h2>
-    
     <div class="project-list">
         
 {% assign projects = site.project %}
-{% assign projects = projects | where: "exclude", false | sort: "order" %}
+{% assign projects = projects | where_exp: "exclude", "exclude != true" | sort: "order" %}
 
 {% for project in projects %}
         <div class="project">
-            <h3><a href="{{ project.url | prepend: site.baseurl }}">{{project.title}}</a></h3>
-            <a href="{{ project.url | prepend: site.baseurl }}"><img src="{{ project.image | prepend: site.baseurl }}" alt=""></a>
-            
-            <p class="description">{{ project.description }}</p>
-            
-            {% if forloop.first %}
-                <p>{{ project.content | strip_html | truncatewords:75 }}</p>
-            {% else %}
-                <p>{{ project.content | strip_html | truncatewords:30 }}</p>
-            {% endif %}
-            
-            <a href="{{ project.url | prepend: site.baseurl }}">Read more...</a>
-            
+            <a class="hero" href="{{ project.url | prepend: site.baseurl }}"><img src="{{ project.image | prepend: site.baseurl }}" alt=""></a>
+            <div class="desc">
+                <h3><a href="{{ project.url | prepend: site.baseurl }}">{{project.title}}</a></h3>
+                <p class="byline">{{ project.description }}</p>
+                <a class="link" href="{{ project.link }}">{{ project.link }}</a>
+                <p>{{ project.content | strip_html | truncatewords:40 }}</p>
+                
+                <a href="{{ project.url | prepend: site.baseurl }}">Read more...</a>
+            </div>
         </div>
 {% endfor %}
-
     </div>
     
 </section>
