--- a/_sass/_general.scss
+++ b/_sass/_general.scss
@@ -17,7 +17,7 @@ body {
 %headings {
     color: #2E2E2E;
     font-weight: normal;
-    margin: 15px 0;
+    margin: 0 0 15px;
 
     a {
         @extend %invert-link-hover;
@@ -28,17 +28,14 @@ body {
     margin-top: 0;
 }
 
-h1, h2 {
+h1 {
     text-align: center;
     margin: 0 0 30px;
-}
-
-h1 {
     font-size: 70px;
 }
 h2 {
     font-size: 50px;
-    @extend %heading-underline;
+    // @extend %heading-underline;
 }
 h3 {
     font-size: 40px;
