--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,28 +1,25 @@
+$title-padding: "30px";
+
 .site-header {
     
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 400px;
+    height: 300px;
     
     h1 {
         a { text-decoration: none; }
         
         text-align: right;
-        margin: 0 30px 0 0;
+        margin: 0 #{$title-padding} 0 0;
         
     }
     
     .contact-list {
         @extend %invis-list;
-        width: 80px;
         border-left: solid 1px $grey-color;
-        padding-left: 8px;
-        
-        a {
-            // color: inherit;
-        }
+        padding-left: #{$title-padding};
         
         li {
             padding: 2px;
@@ -45,8 +42,8 @@
 }
 
 .social-link { 
-    // text-decoration: none; 
-    // &:hover { text-decoration: underline; }
+    text-decoration: none; 
+    &:hover { text-decoration: underline; }
     
     &.github:before {
         content: url(../img/icon-github.svg);
