--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,5 +1,6 @@
 $grey-color: rgb(130, 130, 130);
-$font-family: "Helvetica, arial, nimbussansl, liberationsans";
+$font-family: 'Muli', Helvetica, arial, nimbussansl, liberationsans;
+
 
 h1, h2, h3,
 h4, h5, h6 {
@@ -33,4 +34,11 @@ h4, h5, h6 {
         margin: 16px auto 0;
         background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.40), rgba(0, 0, 0, 0));
     }
+}
+
+.left {
+    float: left;
+}
+.right {
+    float: right;
 }
