--- a/css/styles.scss
+++ b/css/styles.scss
@@ -5,6 +5,6 @@
         "variables",
         "general",
         "header",
-        "projects"
-        
+        "projects",
+        "resume"        
 ;
