--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -69,6 +69,10 @@ $title-padding: "30px";
         display: block;
         height: auto;
         margin-bottom: 15px;
+        
+        h1 {
+            font-size: 60px;
+        }
     }            
 }
 
