--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -8,4 +8,4 @@ layout: default
     <p class="description">{{ page.description }}</p>
     {{ content }}
 </section>
-<a class="site-title" href="{{ site.baseurl }}/">Return to homepage</a>
+<a href="{{ site.baseurl }}/">Return to homepage</a>
