--- a/_sass/_projects.scss
+++ b/_sass/_projects.scss
@@ -66,6 +66,11 @@
         box-shadow: 0 0 20px #D4D4D4;
         margin: 0 auto;
         display: block;
+        max-width: 500px;
+
+        &.no-shadow {
+            box-shadow: none;
+        }
     }
     
     @media (min-width: 740px) {
