--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,9 +6,9 @@
 
 <header class="site-header {{ class }}">
 
-    <h1><a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
+    <h1 class="site-title"><a href="{{ site.baseurl }}/">Christopher Muller</a></h1>
 
-    <ul class="contact-list">
+    <!-- <ul class="contact-list">
         {% if site.email %}
         <li>
         {% include social-email.html email=site.email %}
@@ -26,6 +26,6 @@
         {% include social-twitter.html username=site.twitter_username %}
         </li>
         {% endif %}
-    </ul>
+    </ul> -->
 
 </header>
