Added project pages
Added favicons

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,6 @@
 <footer class="site-footer">
-    {% include nav.html %}
+    <h3 class="h3">All Projects</h3>
+    
+    {% include projects.html %}    
+    
 </footer>
