--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,22 +1,17 @@
 <section class="projects">
-    <div class="project-list">
-        
-{% assign projects = site.project %}
-{% assign projects = projects | where_exp: "exclude", "exclude != true" | sort: "order" %}
-
-{% for project in projects %}
-        <div class="project">
-            <a class="hero" href="{{ project.url | prepend: site.baseurl }}"><img src="{{ project.image | prepend: site.baseurl }}" alt=""></a>
-            <div class="desc">
-                <h3><a href="{{ project.url | prepend: site.baseurl }}">{{project.title}}</a></h3>
-                <p class="byline">{{ project.description }}</p>
-                <a class="link" href="{{ project.link }}">{{ project.link }}</a>
-                <p>{{ project.content | strip_html | truncatewords:40 }}</p>
-                
-                <a href="{{ project.url | prepend: site.baseurl }}">Read more...</a>
-            </div>
-        </div>
-{% endfor %}
-    </div>
-    
+    <a href="/awardstack" class="project">
+        <div class="project-logo awardstack"></div>
+        <h2 class="h2">Awardstack</h2>
+        <p>Built from the ground up to host, manage, and judge events and competitions.</p>
+    </a>
+    <a href="/simple-scales" class="project">
+        <div class="project-logo simple-scales"></div>
+        <h2 class="h2">Simple Scales</h2>
+        <p>A simple way to update your weight using the native HealthKit API.</p>
+    </a>
+    <a href="/neutron" class="project">
+        <div class="project-logo neutron"></div>
+        <h2 class="h2">Neutron</h2>
+        <p>A Sass framework created for making flexible, clear, and semantic layouts.</p>
+    </a>
 </section>
