--- a/css/styles.scss
+++ b/css/styles.scss
@@ -89,6 +89,10 @@ p {
     margin: 0;
 }
 
+p + p {
+    margin-top:1rem;
+}
+
 // =====================================================================
 // Global Layout
 // =====================================================================
@@ -175,12 +179,20 @@ body {
     
     font-weight: lighter;
     font-size: 0.8rem;
+
+    box-shadow: 0 2px 4px rgba(0,0,0,0.5);
+    transition: background-color 0.25s ease, color 0.25s ease;
 }
 
-figure {
+.btn:hover {
+    background-color: $copy;
+    color: $primary;
+}
+
+.rounded-figure {
     margin: 2rem 0;
 }
-figure > *:not(figcaption) {
+.rounded-figure > *:not(figcaption) {
     width: 100%;
     border-radius: 0.5rem;
     box-shadow: $dark-shadow;
@@ -253,24 +265,24 @@ figcaption {
 }
 
 .project-logo.awardstack {
-    background-image: url("/img/awardstack.svg");
+    background-image: url("/img/awardstack/icon.svg");
 }
 .project:hover .project-logo.awardstack {
-    background-image: url("/img/awardstack_hover.svg");
+    background-image: url("/img/awardstack/icon_color.svg");
 }
 
 .project-logo.simple-scales {
-    background-image: url("/img/simple-scales.svg");
+    background-image: url("/img/simple-scales/icon.svg");
 }
 .project:hover .project-logo.simple-scales {
-    background-image: url("/img/simple-scales_hover.svg");
+    background-image: url("/img/simple-scales/icon_color.svg");
 }
 
 .project-logo.neutron {
-    background-image: url("/img/neutron.svg");
+    background-image: url("/img/neutron/icon.svg");
 }
 .project:hover .project-logo.neutron {
-    background-image: url("/img/neutron_hover.svg");
+    background-image: url("/img/neutron/icon_color.svg");
 }
 
 
@@ -351,15 +363,20 @@ main.project-page .intro {
 
 // Awardstack
 main.project-page.awardstack .intro {
-    background-image: url("/img/awardstack_intro.png");
+    background-image: url("/img/awardstack/intro.png");
 }
 
 // Simple Scales
 main.project-page.simple-scales .intro {
-    background-image: url("/img/simple-scales_intro.png");
+    background-image: url("/img/simple-scales/intro.png");
+}
+
+.content > .column-figure {
+    margin: 0 1rem 1rem 0;
+    float: left;
 }
 
 // Neutron
 main.project-page.neutron .intro {
-    background-image: url("/img/neutron_intro.png");
+    background-image: url("/img/neutron/intro.png");
 }
