--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,11 +6,11 @@
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/img/meta/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/img/meta/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/img/meta/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ec3b33">
+  <link rel="mask-icon" href="/img/meta/safari-pinned-tab.svg" color="#ec3b33">
   <meta name="msapplication-TileColor" content="#252323">
   <meta name="theme-color" content="#ec3b33">
   
