style fixes and removed old content

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="site-header {{ class }}">
+<header class="frame-element site-header {{ class }}">
     
     <a class="logo" href="{{ site.baseurl }}/"><img src="/img/logo.svg" alt=""></a>
     <h1 class="site-title">
