--- a/_includes/social-github.html
+++ b/_includes/social-github.html
@@ -1,1 +1,1 @@
-<a class="social-link github" href="https://github.com/{{ include.username }}">github</a>
+<a class="social-link github" href="https://github.com/sharlos">github</a>
