--- a/css/styles.scss
+++ b/css/styles.scss
@@ -34,11 +34,8 @@ html {
     line-height: 1.4;
     
     @media (min-width: 300px) {
-        font-size: calc(10px + 0.5vh + 0.5vw);
+        font-size: calc(10px + 1vw);
     }
-    
-    
-    
     
 }
 
