--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html class="{{ page.class }}">
 
 {% include head.html %}
 
-<body class="{{ page.class }}">
+<body>
 <!-- <script>
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
