--- a/css/styles.scss
+++ b/css/styles.scss
@@ -104,9 +104,7 @@ html {
 }
 
 body {
-    // display: flex;
-    // flex-direction: column;
-    height: 100%;
+    // height: 100%;
 }
 
 
@@ -223,19 +221,28 @@ figcaption {
 
 .social-link {
     display: block;
-    width: 36px;
-    height: 36px;
-    margin: 7px 2px;
+    width: 26px;
+    height: 26px;
+    margin: 0 5px;
     
-    background-size: 25px 25px;
+    background-size: 15px 15px;
     background-position: center;
     background-repeat: no-repeat;
     
     line-height: 0; 
     font-size: 0;
     color: transparent; 
-
-    transition: background-image 0.2s ease-in-out;
+    
+    transition: background-image 0.2s ease;
+    
+    
+    @media (min-width: $mobile) {
+        width: 36px;
+        height: 36px;
+        margin: 7px 2px;
+        
+        background-size: 25px 25px;
+    }    
     
 }
 
@@ -252,6 +259,12 @@ figcaption {
 .social-link.medium:hover {
     background-image: url("/img/icon-medium_color.svg");
 }
+// Responsive Images
+.responsive-img {
+    max-width: 100%;
+    height: auto;
+}
+
 
 // =====================================================================
 // Projects
@@ -309,7 +322,7 @@ figcaption {
     background-image: url("/img/awardstack/icon.svg");
 }
 .project:hover .project-logo.awardstack,
-body.awardstack .site-footer .project-logo.awardstack {
+html.awardstack .site-footer .project-logo.awardstack {
     background-image: url("/img/awardstack/icon_color.svg");
 }
 
@@ -317,7 +330,7 @@ body.awardstack .site-footer .project-logo.awardstack {
     background-image: url("/img/simple-scales/icon.svg");
 }
 .project:hover .project-logo.simple-scales,
-body.simple-scales .site-footer .project-logo.simple-scales {
+html.simple-scales .site-footer .project-logo.simple-scales {
     background-image: url("/img/simple-scales/icon_color.svg");
 }
 
@@ -325,7 +338,7 @@ body.simple-scales .site-footer .project-logo.simple-scales {
     background-image: url("/img/neutron/icon.svg");
 }
 .project:hover .project-logo.neutron,
-body.neutron .site-footer .project-logo.neutron {
+html.neutron .site-footer .project-logo.neutron {
     background-image: url("/img/neutron/icon_color.svg");
 }
 
@@ -343,25 +356,27 @@ body.neutron .site-footer .project-logo.neutron {
     color: $secondary;
 }
 
-body.home {
-    background: url("/img/home_bg.png");
+html.home {
+    // height: 100%;
+
+    background: $background;
+    background: url("/img/home_bg.png"), $background;
     background-size: cover;
+    background-repeat: no-repeat;
     background-position: center center;
+    background-attachment: fixed;
+
+    @media (min-width: $mobile) {
+        background-attachment: scroll;
+    }    
 }
 
-
 .home-footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     padding: 0 0.6rem;
     box-sizing: border-box;
     justify-content: flex-end;
-}
-
-body.home main {
-    // display: flex;
-    // flex-direction: column;
-    // height: 100%;
 }
 
 // =====================================================================
@@ -405,7 +420,7 @@ main.project-page .intro {
 }
 
 .content {
-    max-width: calc(300px + 30vw);
+    max-width: calc(500px + 30vw);
     margin: 3rem auto;
     color: $copy;
     padding: 3vw;
@@ -425,21 +440,26 @@ main.project-page .intro {
 // =====================================================================
 
 // Awardstack
-body.awardstack .project-page .intro {
+html.awardstack .project-page .intro {
     background-image: url("/img/awardstack/intro.png");
 }
 
 // Simple Scales
-body.simple-scales .project-page .intro {
+html.simple-scales .project-page .intro {
     background-image: url("/img/simple-scales/intro.png");
 }
 
 .content > .column-figure {
-    margin: 0 1rem 1rem 0;
-    float: left;
+    margin: auto;
+    text-align: center;
+
+    @media (min-width: $mobile) {
+        margin: 0 1rem 1rem 0;
+        float: left;
+    }
 }
 
 // Neutron
-body.neutron .project-page .intro {
+html.neutron .project-page .intro {
     background-image: url("/img/neutron/intro.png");
 }
