--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,8 @@
 <footer class="site-footer">
     <h3 class="h3">All Projects</h3>
     
-    {% include projects.html %}    
+    {% include projects.html %}   
+    
+    <a href="/" class="btn">Back to Homepage</a>
     
 </footer>
