--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
     
     <a class="logo" href="{{ site.baseurl }}/"><img src="/img/logo.svg" alt=""></a>
     <h1 class="site-title">
-        <a href="{{ site.baseurl }}/">Christopher Muller</a>
+        <a href="{{ site.baseurl }}/">Chris<span class="hide-xs">topher</span> Muller</a>
     </h1>
     
 </header>
