--- a/css/styles.scss
+++ b/css/styles.scss
@@ -27,14 +27,29 @@ $header-height: 50px;
 
 
 // =====================================================================
+// Utilities
+// =====================================================================
+// Responsive Images
+.responsive-img {
+    max-width: 100%;
+    height: auto;
+}
+
+.hide-xs {
+    @media (max-width: $xs - 1) {
+        display: none;
+    }
+}
+
+// =====================================================================
 // Typography
 // =====================================================================
 html {
-    font-size: calc(6px + 1vw);
+    font-size: calc(15px + 0.5vw);
     line-height: 1.4;
     
     @media (min-width: 300px) {
-        font-size: calc(10px + 1vw);
+        // font-size: calc(10px + 2vw);
     }
     
 }
@@ -48,7 +63,18 @@ html {
     padding: 0.5rem 0;
     text-transform: uppercase;
     line-height: 1;
+
 }
+
+
+a.h1, a.h2, a.h3, a.h4, a.h5, a.h6 {
+    
+    &:hover {
+        text-decoration: none;
+        color: $primary;
+    }
+}
+
 
 .h1 {
     font-size: 2.5rem;
@@ -81,6 +107,7 @@ html {
     font-size: 1rem;
     text-transform: none;
     font-family: 'Roboto Condensed', sans-serif;
+    color: $copy;
 }
 
 p {
@@ -111,13 +138,8 @@ body {
 .frame-element {
     background: rgba(0,0,0,0.2);
     width: 100%;
-    height: 28px;
-    display: flex;
-    
-    @media (min-width: $mobile) {
-        height: 50px;
-    }    
-    
+    height: 50px;
+    display: flex;    
 }
 
 .site-header {
@@ -134,7 +156,8 @@ body {
     letter-spacing: 1px;
     color: $secondary;
     text-transform: uppercase;
-    
+    display: flex;
+    align-items: center;
     
     @media (min-width: $mobile) {
         padding: 15px 2px;
@@ -147,9 +170,9 @@ body {
         color: inherit;
     }
     
-    @media (max-width: 240px) {
-        display: none;
-    }    
+    // @media (max-width: 240px) {
+    //     display: none;
+    // }    
     
 }
 
@@ -221,12 +244,12 @@ figcaption {
 
 .social-link {
     display: block;
-    width: 26px;
-    height: 26px;
-    margin: 0 5px;
+    width: 36px;
+    height: 36px;
+    margin: 7px 2px;
     
-    background-size: 15px 15px;
-    background-position: center;
+    background-size: 25px 25px;
+background-position: center;
     background-repeat: no-repeat;
     
     line-height: 0; 
@@ -236,13 +259,13 @@ figcaption {
     transition: background-image 0.2s ease;
     
     
-    @media (min-width: $mobile) {
-        width: 36px;
-        height: 36px;
-        margin: 7px 2px;
+    // @media (min-width: $mobile) {
+    //     width: 36px;
+    //     height: 36px;
+    //     margin: 7px 2px;
         
-        background-size: 25px 25px;
-    }    
+    //     background-size: 25px 25px;
+    // }    
     
 }
 
@@ -259,12 +282,6 @@ figcaption {
 .social-link.medium:hover {
     background-image: url("/img/icon-medium_color.svg");
 }
-// Responsive Images
-.responsive-img {
-    max-width: 100%;
-    height: auto;
-}
-
 
 // =====================================================================
 // Projects
@@ -390,12 +407,8 @@ html.home {
     justify-content: center;
     text-align: center;
     
-    padding: calc(28px + 1rem) 1rem 1rem;
-    
-    @media (min-width: $mobile) {
-        padding: calc(50px + 1rem) 1rem 1rem;
-    }    
-    
+    padding: calc(50px + 1rem) 1rem 1rem;
+        
 }
 
 .intro p {
