--- a/css/styles.scss
+++ b/css/styles.scss
@@ -220,7 +220,7 @@ body {
 .rounded-figure {
     margin: 2rem 0;
 }
-.rounded-figure > *:not(figcaption) {
+.rounded-figure img {
     width: 100%;
     border-radius: 0.5rem;
     box-shadow: $dark-shadow;
