--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,4 +19,5 @@
   <link rel="stylesheet" href="{{ "/css/styles.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
+  {% include prefetch.html %}
 </head>
