--- a/css/styles.scss
+++ b/css/styles.scss
@@ -29,7 +29,6 @@ $header-height: 50px;
 // =====================================================================
 // Utilities
 // =====================================================================
-// Responsive Images
 .responsive-img {
     max-width: 100%;
     height: auto;
@@ -47,23 +46,18 @@ $header-height: 50px;
 html {
     font-size: calc(15px + 0.5vw);
     line-height: 1.4;
-    
-    @media (min-width: 300px) {
-        // font-size: calc(10px + 2vw);
-    }
-    
+    font-family: 'Roboto', Verdana, Geneva, Tahoma, sans-serif;    
 }
 
 
 .h1, .h2, .h3, .h4, .h5, .h6 {
     color: $primary;
-    font-family: 'Roboto', sans-serif;
     letter-spacing: 2px;
     margin: 0;
     padding: 0.5rem 0;
     text-transform: uppercase;
     line-height: 1;
-
+    
 }
 
 
@@ -130,11 +124,6 @@ html {
     height: 100%;
 }
 
-body {
-    // height: 100%;
-}
-
-
 .frame-element {
     background: rgba(0,0,0,0.2);
     width: 100%;
@@ -168,12 +157,7 @@ body {
     a {
         text-decoration: none;
         color: inherit;
-    }
-    
-    // @media (max-width: 240px) {
-    //     display: none;
-    // }    
-    
+    }    
 }
 
 .logo {
@@ -185,14 +169,11 @@ body {
     @media (min-width: $mobile) {
         padding: 12px;
     }    
-    
-    
 }
 
 .logo img {
     height: 100%;
 }
-
 
 .btn {
     padding: 0.25rem 1rem;
@@ -220,6 +201,7 @@ body {
 .rounded-figure {
     margin: 2rem 0;
 }
+
 .rounded-figure img {
     width: 100%;
     border-radius: 0.5rem;
@@ -241,7 +223,6 @@ figcaption {
 
 
 // Social icons
-
 .social-link {
     display: block;
     width: 36px;
@@ -249,7 +230,7 @@ figcaption {
     margin: 7px 2px;
     
     background-size: 25px 25px;
-background-position: center;
+    background-position: center;
     background-repeat: no-repeat;
     
     line-height: 0; 
@@ -257,16 +238,6 @@ background-position: center;
     color: transparent; 
     
     transition: background-image 0.2s ease;
-    
-    
-    // @media (min-width: $mobile) {
-    //     width: 36px;
-    //     height: 36px;
-    //     margin: 7px 2px;
-        
-    //     background-size: 25px 25px;
-    // }    
-    
 }
 
 .social-link.github {
@@ -292,14 +263,11 @@ background-position: center;
     align-content: center;
     flex-direction: column;
     flex-wrap: wrap;
-    justify-content: center;
-    
+    justify-content: center; 
     
     @media (min-width: $mobile) {
         flex-direction: row;
     }
-    
-    
 }
 
 .project {
@@ -323,8 +291,6 @@ background-position: center;
     }
 }
 
-
-
 .project-logo {
     width: 100%;
     height: 180px;
@@ -332,12 +298,12 @@ background-position: center;
     background-size: 180px;
     background-position: center;
     transition: background-image 0.2s ease-in-out;
-    
 }
 
 .project-logo.awardstack {
     background-image: url("/img/awardstack/icon.svg");
 }
+
 .project:hover .project-logo.awardstack,
 html.awardstack .site-footer .project-logo.awardstack {
     background-image: url("/img/awardstack/icon_color.svg");
@@ -346,6 +312,7 @@ html.awardstack .site-footer .project-logo.awardstack {
 .project-logo.simple-scales {
     background-image: url("/img/simple-scales/icon.svg");
 }
+
 .project:hover .project-logo.simple-scales,
 html.simple-scales .site-footer .project-logo.simple-scales {
     background-image: url("/img/simple-scales/icon_color.svg");
@@ -354,6 +321,7 @@ html.simple-scales .site-footer .project-logo.simple-scales {
 .project-logo.neutron {
     background-image: url("/img/neutron/icon.svg");
 }
+
 .project:hover .project-logo.neutron,
 html.neutron .site-footer .project-logo.neutron {
     background-image: url("/img/neutron/icon_color.svg");
@@ -374,15 +342,13 @@ html.neutron .site-footer .project-logo.neutron {
 }
 
 html.home {
-    // height: 100%;
-
     background: $background;
     background: url("/img/home_bg.png"), $background;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
-
+    
     @media (min-width: $mobile) {
         background-attachment: scroll;
     }    
@@ -399,7 +365,6 @@ html.home {
 // =====================================================================
 // Project Page
 // =====================================================================
-
 .intro {
     box-sizing: border-box;
     display: flex;
@@ -408,7 +373,7 @@ html.home {
     text-align: center;
     
     padding: calc(50px + 1rem) 1rem 1rem;
-        
+    
 }
 
 .intro p {
@@ -424,8 +389,6 @@ html.home {
         height: 10rem;
     }
 }
-
-
 
 main.project-page .intro {
     background-position: top center;
@@ -465,7 +428,7 @@ html.simple-scales .project-page .intro {
 .content > .column-figure {
     margin: auto;
     text-align: center;
-
+    
     @media (min-width: $mobile) {
         margin: 0 1rem 1rem 0;
         float: left;
