mobile img adjustments

--- a/_includes/prefetch.html
+++ b/_includes/prefetch.html
@@ -1,4 +1,4 @@
-<!-- <link rel="preload" href="bg-image-narrow.png" as="image" media="(max-width: 600px)"> -->
+<link rel="preload" href="/img/home_bg.png" as="image" media="(min-width: 700px)">
 <link rel="preload" href="/img/awardstack/icon_color.svg" as="image">
 <link rel="preload" href="/img/simple-scales/icon_color.svg" as="image">
 <link rel="preload" href="/img/neutron/icon_color.svg" as="image">
