Added social icons to header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,5 +4,7 @@
     <h1 class="site-title">
         <a href="{{ site.baseurl }}/">Chris<span class="hide-xs">topher</span> Muller</a>
     </h1>
+    {% include social-icons.html %}
+
     
 </header>
